implement dev prod profiles